Fixed layout issue after clicking dismiss

--- a/style.css
+++ b/style.css
@@ -205,24 +205,20 @@ body {
 }
 
 
-.showCon { 
-  display: flex;
-  flex-direction: column;
-}
-
 /* Tablets    */
 
-@media(min-width: 600px) { 
+@media(min-width: 550px) { 
     body { 
       align-items: center;
    }
 
      .form-container { 
       border-radius: 10px;
+      min-width: 575px;
      }
 
      .form__text-container { 
-        border-radius: 10px;
+        border-radius: 20px;
         justify-content: center;
      }
 
@@ -239,9 +235,6 @@ body {
 
 @media(min-width: 800px) { 
 
-  .showCon { 
-    flex-direction: row-reverse;
-  } 
   .form-container { 
     display: flex;
     flex-direction: row-reverse;
